# codecrafters-shell-cpp

./: CMakeLists.txt  MyReadme.md  README.md
headers/: shell.hpp
source/: builtins.cpp  external.cpp  redirection.cpp  shell.cpp  tokenizer.cpp
src/: main.cpp
